[project]
name = "Mycelium"
version = "0.1.0"
description = "A webhook telemetry hub for GitHub events"
authors = [
    { name = "Kate Petrov", email = "[EMAIL_ADDRESS]" }
]
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.104.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.24.0",
]
